Fix footer width problem on firefox

--- a/unb-fs/stylesheets/_footer.scss
+++ b/unb-fs/stylesheets/_footer.scss
@@ -10,7 +10,7 @@
     background: $footer-background;
     margin: -5px auto;
     padding: 30px 0px 20px;
-    width: 1000px;
+    width: 76%;
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.3);
     -moz-box-shadow: 0 0 10px rgba(0,0,0,0.3);
     box-shadow: none;
